changed num of issues, commits, and unit tests

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -13,7 +13,7 @@
 			<h2>Nestor Castro</h2>
 			<p>Nestor is a 3rd-year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. In his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.<p>
 			<p><strong>Responsibilities: </strong>front-end, hosting</p>
-			<p><strong>Number of commits: 23</strong></p>
+			<p><strong>Number of commits: 41</strong></p>
 			<p><strong>Number of issues: 3</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
@@ -23,7 +23,7 @@
 			<h2>Nicholas Cobb</h2>
 			<p>Nicholas is a 3rd-year Computer Science major at the University of Texas at Austin. Nicholas has interned at Google two times and is about to again this summer. In his free time, he enjoys writing music and participating in political clubs on campus.</p>
 			<p><strong>Responsibilities: </strong>front-end, coding</p>
-			<p><strong>Number of commits: 41</strong></p>
+			<p><strong>Number of commits: 81</strong></p>
 			<p><strong>Number of issues: 4</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
@@ -33,8 +33,8 @@
 			<h2>Joel Davis</h2>
 			<p>Joel is a 4th-year Computer Science major at the University of Texas at Austin. Enjoys game development and software engineering. In his free time he likes video games, guitar, and skateboarding.</p>
 			<p><strong>Responsibilities: </strong>back-end, API</p>
-			<p><strong>Number of commits: 50</strong></p>
-			<p><strong>Number of issues: 0</strong></p>
+			<p><strong>Number of commits: 81</strong></p>
+			<p><strong>Number of issues: 8</strong></p>
 			<p><strong>Number of unit tests: 6</strong></p>
 		</div>
 
@@ -43,8 +43,8 @@
 			<h2>Nilo Lisboa</h2>
 			<p>Nilo is a 4th-year Computer Science Major at UT Austin. He has interned twice at IBM both part-time and full-time. He really enjoys story-driven video games as well as archery and kendo.</p>
 			<p><strong>Responsibilities: </strong>back-end, Phase I Leader</p>
-			<p><strong>Number of commits: 21</strong></p>
-			<p><strong>Number of issues: 2</strong></p>
+			<p><strong>Number of commits: 16</strong></p>
+			<p><strong>Number of issues: 6</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
 
@@ -53,8 +53,8 @@
 			<h2>Matthew Martinez</h2>
 			<p>Matthew is a 3rd-year Computer Science major at the University of Texas at Austin. He is the vice-president of Lambda Omega Alpha, an independent Catholic Service Fraternity on campus. In his very little free time he enjoys watching Netflix and spending quality time with friends.</p>
 			<p><strong>Responsibilities: </strong>front-end, design</p>
-			<p><strong>Number of commits: 35</strong></p>
-			<p><strong>Number of issues: 41</strong></p>
+			<p><strong>Number of commits: 74</strong></p>
+			<p><strong>Number of issues: 46</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
 
@@ -63,9 +63,9 @@
 			<h2>Jose Ramirez</h2>
 			<p>Jose is a 4th-year Computer Science major at the University of Texas at Austin. He enjoys game development and participates in ACM activities. In his free time, he plays video games and watches gaming streams on Twitch. </p>
 			<p><strong>Responsibilities: </strong>back-end, testing</p>
-			<p><strong>Number of commits: 21</strong></p>
+			<p><strong>Number of commits: 23</strong></p>
 			<p><strong>Number of issues: 0</strong></p>
-			<p><strong>Number of unit tests: 6</strong></p>
+			<p><strong>Number of unit tests: 8</strong></p>
 		</div>
 	</div>
 
@@ -73,9 +73,9 @@
 
 	<div id="stats" class="about-section">
 		<h1><strong>Stats</strong></h1>
-		<p><strong>Number of commits: 191</strong></p>
-		<p><strong>Number of issues: 50</strong></p>
-		<p><strong>Number of unit tests: 12</strong></p>
+		<p><strong>Number of commits: 316</strong></p>
+		<p><strong>Number of issues: 67</strong></p>
+		<p><strong>Number of unit tests: 16</strong></p>
 		<p><strong><a href="http://docs.apimagicthegatheringio.apiary.io">Link to Apiary API</strong></p>
 		<p><strong><a href="https://github.com/jtd2226/magicdbswe/issues">Link to Github Issue Tracker</a></strong></p>
 		<p><strong><a href="https://github.com/jtd2226/magicdbswe/tree/dev">Link to Github Repo</a></strong></p>
@@ -113,7 +113,7 @@
 		<h3 style="margin-bottom: 15px;">Developers: SWEet Gathering</h3>
 		<p><u>Nestor Castro: Junior, <b>Front-end:</b> Hosting, <b>Back-end:</b> Database</u>
 		<br>
-		He is a 3rd year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers. During Phase 1, he was responsible for setting up the GCP server and updating the image of the website. During Phase 2, he was responsible for creating and linking the GCP database, as well as setting up the proxy needed for connections to and from the database.During Phase 3, he was responsible for debugging and helped implemented search on the front-end. </p>
+		He is a 3rd year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers. During Phase 1, he was responsible for setting up the GCP server and updating the image of the website. During Phase 2, he was responsible for creating and linking the GCP database, as well as setting up the proxy needed for connections to and from the database.During Phase 3, he was responsible for debugging and helping implement search on the front-end. </p>
 
 		<p><u>Nicholas Cobb: Junior, <b>Front-end:</b> Website</u> <b>Phase 3 Leader</b>
 		<br>
